--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
             </div>
         </div>
     </div>
-    <!-- Projects Section -->
    <!-- Projects Section -->
 <div id="projects">
     <div class="container">
@@ -104,11 +103,7 @@
             <!-- Project Details -->
             <div class="tab-contents active-tab" id="bus_project">
                 <div class="project-item">
-                    <h3> <i class="fab fa-flutter"></i> Flutter, <i class="fab fa-node-js"></i> Node.js, <i class="fab fa-aws"></i> MongoDB | |</h3>
-                    <i class="fab fa-flutter"></i> <!-- Icon for Flutter -->
-                    <i class="fab fa-node-js"></i> <!-- Icon for Node.js -->
-                    <!-- Icon for Python -->
-                    <i class="fab fa-html5"></i> <!-- Icon for HTML -->
+                    <h3> <i class="fab fa-flutter"></i> Flutter, <i class="fab fa-node-js"></i> Node.js, <i class="fab fa-aws"></i> MongoDB </h3>
                     <a href="https://github.com/kur1an/bust_mini.git" target="_blank" class="git-link">Git</a> <!-- Add class "git-link" -->
                     <p>Spearheaded the development of BusT: Private & Public Bus Timing, a revolutionary mobile app designed to streamline commuting experiences for users across Kerala.</p>
                     <p>Employed Flutter for frontend development, ensuring a sleek UI across platforms. Engineered a robust backend with Node.js, leveraging MongoDB for efficient data management.</p>
@@ -126,7 +121,7 @@
 
             <div class="tab-contents" id="home_auto_project">
                 <div class="project-item">
-                    </h3> <i class="fab fa-html5"></i> <!-- Icon for HTML --><i class="fab fa-js"></i> <!-- Icon for JavaScript --><i class="fas fa-microchip"></i </h3>
+                    <h3> <i class="fab fa-html5"></i><i class="fab fa-js"></i><i class="fas fa-microchip"></i</h3>
                     <a href="https://github.com/kur1an/Home-Automation-.git" target="_blank" class="git-link">Git</a> <!-- Add class "git-link" -->
                     <p>Integrated HTML for frontend control, Node.js for server-side logic, and Arduino IDE for microcontroller programming. Implemented innovative features like speech recognition for voice-activated device control.</p>
                     <p>Successfully deployed the Home Automation system, providing users with a convenient and efficient solution for controlling home devices remotely or through voice commands.</p>
@@ -137,6 +132,7 @@
                 <div class="project-item">
                     <h3><i class="fab fa-html5"></i> CSS |</h3>
                     <a href="https://github.com/kur1an/Personal-Portfolio.git" target="_blank" class="git-link">Git</a> <!-- Add class "git-link" -->
+                    <p> my perrosnal</p>
                 </div>
             </div>
         </div>
