--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="https://drive.google.com/drive/folders/13_UyQFcmVopnGngKqG5iDLhQSCr7HOr9" target="_blank">My Resume</a></li>
-
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -86,6 +84,7 @@
             </div>
         </div>
     </div>
+    <!-- Projects Section -->
    <!-- Projects Section -->
 <div id="projects">
     <div class="container">
@@ -121,7 +120,7 @@
 
             <div class="tab-contents" id="home_auto_project">
                 <div class="project-item">
-                    <h3> <i class="fab fa-html5"></i><i class="fab fa-js"></i><i class="fas fa-microchip"></i</h3>
+                    <h3> <i class="fab fa-html5"></i><i class="fab fa-js"></i><i class="fas fa-microchip"></i </h3>
                     <a href="https://github.com/kur1an/Home-Automation-.git" target="_blank" class="git-link">Git</a> <!-- Add class "git-link" -->
                     <p>Integrated HTML for frontend control, Node.js for server-side logic, and Arduino IDE for microcontroller programming. Implemented innovative features like speech recognition for voice-activated device control.</p>
                     <p>Successfully deployed the Home Automation system, providing users with a convenient and efficient solution for controlling home devices remotely or through voice commands.</p>
@@ -196,6 +195,31 @@
             </div>
         </div>
         
+<!-- Contact Section -->
+<div id="contact">
+    <div class="container">
+        <h1 class="sub-title">Contact Me</h1>
+        <div class="contact-info">
+            <p><i class="fas fa-phone"></i> 7510300688</p>
+            <p><i class="far fa-envelope"></i> <a href="mailto:amith.kurianj@gmail.com">amith.kurianj@gmail.com</a></p>
+            <p><i class="fas fa-map-marker-alt"></i> Kozhikode, Kerala, 673573</p>
+            <a href="https://drive.google.com/drive/folders/13_UyQFcmVopnGngKqG5iDLhQSCr7HOr9" target="_blank" download class="resume-download-btn">Download Resume</a>
+
+        </div>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/amithkurianjoseph/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/amith.kurianjoseph/" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/kur1an_/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/kur1an" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/kur1an__" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.snapchat.com/add/kuri.annn?share_id=jpH8VNyEdXA&locale=en-US" target="_blank"><i class="fab fa-snapchat"></i></a>
+            <a href="https://codepen.io/Amith-Kurian-Joseph" target="_blank"><i class="fab fa-codepen"></i></a>
+            <a href="https://medium.com/@amithkurianj" target="_blank"><i class="fab fa-medium"></i></a>
+            <a href="https://discord.com/channels/@me" target="_blank"><i class="fab fa-discord"></i></a>
+        </div>
+    </div>
+</div>
+
         <script>
             function opentab(event, tabname) {
                 var tablinks = document.getElementsByClassName("tab-links");
