--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="logo.png" class="logo" alt="Website Logo">
+                <img src="AMITH_KURIAN_JOSEPH__1_-removebg-preview.png" class="logo" alt="Website Logo">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
