--- a/index.html
+++ b/index.html
@@ -202,9 +202,11 @@
         <div class="contact-info">
             <p><i class="fas fa-phone"></i> 7510300688</p>
             <p><i class="far fa-envelope"></i> <a href="mailto:amith.kurianj@gmail.com">amith.kurianj@gmail.com</a></p>
-            <p><i class="fas fa-map-marker-alt"></i> Kozhikode, Kerala, 673573</p>
-            <a href="https://drive.google.com/drive/folders/13_UyQFcmVopnGngKqG5iDLhQSCr7HOr9" target="_blank" download class="resume-download-btn">Download Resume</a>
+            <p><i class="fas fa-map-marker-alt"></i> Kozhikode, Kerala, 673573</p>            </div>
 
+            <div class="resume-download">
+                <a href="https://drive.google.com/drive/folders/13_UyQFcmVopnGngKqG5iDLhQSCr7HOr9" target="_blank" download class="resume-download-btn">Download Resume</a>
+            </div>
         </div>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/amithkurianjoseph/" target="_blank"><i class="fab fa-linkedin"></i></a>
