--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="AMITH_KURIAN_JOSEPH__1_-removebg-preview.png" class="logo" alt="Amith Kurian Joseph's Logo">
+                <img src="C:\Users\hp\OneDrive\Documents\AMITH\personal port\Personal-Portfolio\Personal-Portfolio\images\AMITH_KURIAN_JOSEPH__1_-removebg-preview.png" class="logo" alt="Amith Kurian Joseph's Logo">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#about">About</a></li>
