--- a/index.html
+++ b/index.html
@@ -104,8 +104,14 @@
                 <!-- Project Details -->
                 <div class="tab-contents active-tab" id="bus_project">
                     <div class="project-item">
-                        <h3><i class="fab fa-flutter"></i> Flutter, <i class="fab fa-node-js"></i> Node.js, <i class="fab fa-aws"></i> MongoDB</h3>
-                        <a href="https://github.com/kur1an/bust_mini.git" target="_blank" class="git-link">Git</a>
+                        <h3>
+                            <i class="fab fa-flutter"></i> Flutter,
+                            <i class="fab fa-node-js"></i> Node.js,
+                            <i class="fab fa-aws"></i> MongoDB
+                            <a href="https://github.com/kur1an/bust_mini.git" target="_blank" class="git-link">
+                                <i class="fab fa-github"></i>
+                            </a>
+                       
                         <p>Spearheaded the development of BusT: Private & Public Bus Timing, a revolutionary mobile app designed to streamline commuting experiences for users across Kerala.</p>
                         <p>Employed Flutter for frontend development, ensuring a sleek UI across platforms. Engineered a robust backend with Node.js, leveraging MongoDB for efficient data management.</p>
                     </div>
@@ -113,7 +119,7 @@
                 <div class="tab-contents" id="facial_project">
                     <div class="project-item">
                         <h3><i class="fab fa-python"></i> Deep Learning, CNN</h3>
-                        <a href="https://github.com/kur1an/Human-Facial-Recognition-System.git" target="_blank" class="git-link">Git</a>
+                        <a href="https://github.com/kur1an/Human-Facial-Recognition-System.git" target="_blank" class="git-link"><i class="fab fa-github"></i></a>
                         <p>Designed and implemented a sophisticated facial recognition algorithm using deep learning frameworks such as TensorFlow or PyTorch.</p>
                         <p>Successfully deployed the Human Facial Recognition System, providing clients with a reliable and efficient solution for identity verification.</p>
                     </div>
@@ -121,7 +127,7 @@
                 <div class="tab-contents" id="home_auto_project">
                     <div class="project-item">
                         <h3><i class="fab fa-html5"></i> HTML, <i class="fab fa-js"></i> JavaScript, <i class="fas fa-microchip"></i> Arduino</h3>
-                        <a href="https://github.com/kur1an/Home-Automation-.git" target="_blank" class="git-link">Git</a>
+                        <a href="https://github.com/kur1an/Home-Automation-.git" target="_blank" class="git-link"><i class="fab fa-github"></i></a>
                         <p>Integrated HTML for frontend control, Node.js for server-side logic, and Arduino IDE for microcontroller programming. Implemented innovative features like speech recognition for voice-activated device control.</p>
                         <p>Successfully deployed the Home Automation system, providing users with a convenient and efficient solution for controlling home devices remotely or through voice commands.</p>
                     </div>
@@ -129,7 +135,7 @@
                 <div class="tab-contents" id="portfolio_project">
                     <div class="project-item">
                         <h3><i class="fab fa-html5"></i> HTML, <i class="fab fa-css3"></i> CSS</h3>
-                        <a href="https://github.com/kur1an/Personal-Portfolio.git" target="_blank" class="git-link">Git</a>
+                        <a href="https://github.com/kur1an/Personal-Portfolio.git" target="_blank" class="git-link"><i class="fab fa-github"></i></a>
                         <p>Developed a personal portfolio website to showcase my projects and skills, highlighting my proficiency in web development.</p>
                     </div>
                 </div>
@@ -220,30 +226,6 @@
         </div>
     </div>
 
-    <script>
-        function opentab(event, tabname) {
-            var tablinks = document.getElementsByClassName("tab-links");
-            var tabcontents = document.getElementsByClassName("tab-contents");
 
-            for (var tablink of tablinks) {
-                tablink.classList.remove("active-link");
-            }
-            for (var tabcontent of tabcontents) {
-                tabcontent.classList.remove("active-tab");
-            }
-            event.currentTarget.classList.add("active-link");
-            document.getElementById(tabname).classList.add("active-tab");
-        }
-
-        document.addEventListener("DOMContentLoaded", function () {
-            // Ensure the first tab is active by default
-            var defaultTab = document.querySelector('.tab-links.active-link');
-            if (defaultTab) {
-                defaultTab.click();
-            } else {
-                document.querySelector('.tab-links').click();
-            }
-        });
-    </script>
 </body>
 </html>
