--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         </div>
     </div>
     <!-- Projects Section -->
+     
     <div id="projects">
         <div class="container">
             <h1 class="sub-title">Projects</h1>
@@ -225,7 +226,24 @@
             <a href="https://discord.com/channels/@me" target="_blank"><i class="fab fa-discord"></i></a>
         </div>
     </div>
-
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-logo">
+                    <img src="images/489299.jpg" alt="Your Logo">
+                </div>
+                <div class="footer-links">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contac">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
 
 </body>
 </html>
