--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     </style>
 </head>
 <body>
+    <div id="loader">
+        <div id="progress-container">
+            <div id="progress-bar"></div>
+        </div>
+    </div>
+    <div id="main-content" style="display: none;">
     <div id="header">
         <div class="container">
             <nav>
@@ -35,12 +41,15 @@
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+                
                 <div class="view-count">Views: <span id="viewCount">0</span></div>
            
             </nav>
             <div class="header-text">
                 <p>CSE Student</p>
                 <h1>Hi, I'm <span>Amith</span><br>Kurian Joseph From India</h1>
+                <div class="hover-text">Hi, I'm <span>Amith</span></div>
+
             </div>
         </div>
     </div>
